<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">
    <LinearLayout
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center_horizontal"
        android:text="@string/add_item"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/editorColorPrimary"
        android:textStyle="bold" />
    </LinearLayout>

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_title"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_item_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_name"
                android:inputType="textCapWords" />

            <!-- Supplier field -->
            <EditText
                android:id="@+id/edit_item_supplier_email"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_supplier_email"
                android:inputType="textEmailAddress" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_item_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_price"
                android:inputType="numberDecimal" />

            <!-- Initial Quantity field -->
            <EditText
                android:id="@+id/edit_item_initial_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_initial_quantity"
                android:inputType="textEmailAddress" />

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/add_image_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ADD IMAGE"/>
        </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_control_point_white_48dp"
        app:backgroundTint="@color/colorAccent" />
    </RelativeLayout>

